Fixed overflow issue for certain articles and update news route to convert String to Date for published db column

--- a/static/css/news.css
+++ b/static/css/news.css
@@ -5,7 +5,6 @@
     grid-gap: 30px;
     padding: 0.5rem;
     grid-template-rows: auto;
-    border: 2px solid blue;
 }
 
 .news-left, .news-right {
@@ -14,7 +13,6 @@
     margin: 0;
     border-radius: 8px;
     box-shadow: none;
-    border: 2px solid green;
 }
 
 .news-article {
